# floc

./: Cargo.toml  FLO_REFERENCE.md  LICENSE  README.md  build.rs  testing.flo
.github/actions/install-llvm-windows/: action.yml
.github/workflows/: build.yaml  test.yaml
crates/floc/: Cargo.toml  build.rs
crates/floc-analyzer/: Cargo.toml
crates/floc-analyzer/src/: lib.rs  util.rs
crates/floc-ast/: Cargo.toml
crates/floc-ast/src/: dot.rs  lib.rs  visitor.rs
crates/floc-lexer/: Cargo.toml
crates/floc-lexer/src/: lib.rs
crates/floc-lsp/: Cargo.toml
crates/floc-lsp/src/: completions.rs  finder.rs  main.rs  references.rs
crates/floc-parser/: Cargo.toml
crates/floc-parser/src/: lib.rs
crates/floc-span/: Cargo.toml
crates/floc-span/src/: lib.rs
crates/floc/llvm-wrapper/: wrapper.cpp  wrapper.h
crates/floc/src/: analyzer.rs  ast.rs  cli.rs  codegen.rs  lexer.rs  lib.rs  linker.rs  llvm.rs  main.rs  parser.rs  span.rs  utils.rs
crates/floc/src/ast/: dot.rs  visitor.rs
crates/floc/src/cli/: args.rs
flo-examples/: ackermann.flo  prime.flo
flo_examples/: factorial.flo  fibonacci.flo  juste_prix.flo  power.flo  prime.flo
llvm-wrapper/: wrapper.cpp  wrapper.h
src/: analyzer.rs  ast.rs  cli.rs  codegen.rs  grammar.pest  lexer.rs  lib.rs  linker.rs  llvm_wrapper.rs  main.rs  parser.rs  syntax_highlight.rs  utils.rs
src/ast/: dot.rs  mod.rs  visitor.rs
src/cli/: args.rs
tests/: integration.rs
tests/bad/: affectation_5.flo  si_1.flo  type_1.flo
tests/good/: fonction_12.flo
