[package]
name = "floc"
authors = ["Romain Chardiny <romain.chardiny@gmail.com>"]
description = "Compiler for the Flo programming language"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
fastrand = "2.2.0"
miette = { version = "7.4.0", features = ["fancy"] }
pest = "2.7.10"
pest_derive = "2.7.10"
scopeguard = "1.2.0"
thiserror = "2.0.3"

[target.'cfg(not(windows))'.dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0-prefer-dynamic"] }

[target.'cfg(windows)'.dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0-force-static", "target-x86"], default-features = false }

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.5"
