[package]
name = "floc"
authors = ["Romain Chardiny <romain.chardiny@gmail.com>"]
description = "Compiler for the Flo programming language"
version = "0.1.0"
edition = "2024"

[dependencies]
cc = "1.2.24"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
fastrand = "2.3.0"
miette = { version = "7.6.0", features = ["fancy"] }
pest = { version = "2.8.0", features = ["miette-error"] }
pest_derive = "2.8.0"
scopeguard = "1.2.0"
thiserror = "2.0.3"

[target.'cfg(not(windows))'.dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1-prefer-dynamic"] }

[target.'cfg(windows)'.dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1-force-static", "target-x86"], default-features = false }

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.5"
clap_mangen = "0.2.26"
