[package]
name = "floc"
authors = ["Romain Chardiny <romain.chardiny@gmail.com>"]
description = "Compiler for the Flo programming language"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
cc = "1.2.24"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
fastrand = "2.3.0"
miette = { version = "7.6.0", features = ["fancy"] }
pest = { version = "2.8.0", features = ["miette-error"] }
pest_derive = "2.8.0"
scopeguard = "1.2.0"
thiserror = "2.0.3"
llvm-sys = "181.2.0"
clap_complete = "4.5.5"

[target.'cfg(not(windows))'.dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1-prefer-dynamic"] }

[target.'cfg(windows)'.dependencies]
inkwell = { version = "0.6.0", features = [
    "llvm18-1-force-static",
    "target-x86",
    "target-aarch64",
], default-features = false }

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.24"
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.5"
clap_mangen = "0.2.26"
