[package]
name = "floc"
authors = ["Romain Chardiny <romain.chardiny@gmail.com>"]
description = "Compiler for the Flo programming language"
version = "0.2.2"
license = "MIT"
edition = "2024"
build = "build.rs"

[lib]
name = "floc"
path = "src/lib.rs"

[[bin]]
name = "floc"

[features]
default = ["codegen"]
codegen = ["cc", "bindgen", "llvm-sys", "inkwell"]

[dependencies]
cc = { version = "1.2.24", optional = true }
clap = { version = "4.5.4", features = ["derive", "cargo"] }
fastrand = "2.3.0"
miette = { version = "7.6.0", features = ["fancy"] }
pest = { version = "2.8.0", features = ["miette-error"] }
pest_derive = "2.8.0"
scopeguard = "1.2.0"
thiserror = "2.0.3"
llvm-sys = { version = "181.2.0", optional = true }
clap_complete = "4.5.5"
logos = "0.15.1"
owo-colors = "4.2.3"

[target.'cfg(not(windows))'.dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1-prefer-dynamic"], optional = true }

[target.'cfg(windows)'.dependencies]
inkwell = { version = "0.6.0", features = [
    "llvm18-1-force-static",
    "target-x86",
    "target-aarch64",
], default-features = false, optional = true }

[build-dependencies]
bindgen = { version = "0.71.1", optional = true }
cc = { version = "1.2.24", optional = true }
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.5"
clap_mangen = "0.2.26"
